# jojo-alpha

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  INVARIANTS.md  README.md  RUNTIME_NOTES.md  flake.nix
agent/: manifest.json
agent/baml_src/: clients.baml  strategy.baml
agent/src/: index.ts
bindings/: EmptyArgs.ts  GraphQueryInput.ts  GraphQueryParams.ts  GraphQueryType.ts  OdosAction.ts  OdosInput.ts  PaperTradingAction.ts  PaperTradingInput.ts  QueryFilters.ts  QueryPlan.ts  WalletAction.ts  WalletInput.ts  WalletSignMessageInput.ts  WalletSignTxInput.ts
docs/: passkey-demo.md
node_archives/minimal-policy-node/: manifest.json  policy.json
node_archives/minimal-policy-node/baml_src/: policy.baml
node_archives/minimal-policy-node/src/: index.ts
node_archives/passkey-demo-node/: manifest.json  policy.json
node_archives/passkey-demo-node/baml_src/: policy.baml
node_archives/passkey-demo-node/src/: index.ts
scripts/: demo_baml_runtime.sh
src/: config.rs  error.rs  lib.rs  main.rs  runner.rs  tokens.rs
src/config/: mod.rs  rpc.rs
src/graphql/: mod.rs
src/interceptors/: audit_log.rs  cooldown.rs  mod.rs  policy.rs  slippage_guard.rs  spend_limit.rs
src/paper_trading/: mod.rs  portfolio.rs
src/tools/: graph_gateway.rs  mod.rs  odos.rs  paper_trading.rs  the_graph.rs  types.rs  wallet.rs  wallet_signing.rs
src/wallet/: mod.rs  signer.rs  simulator.rs
telemetry/: provenance.jsonl  snapshot.json
