[package]
name = "defi-trading-agent"
version = "0.1.0"
edition = "2021"
description = "AI-powered DeFi trading agent using BAML runtime"
license = "MIT"

[[bin]]
name = "defi-agent"
path = "src/main.rs"

[dependencies]
# BAML Runtime
baml-rt = { path = "../baml-ts-sandbox" }

# DEX Aggregator
odos-sdk = "2.0"

# GraphQL
graphql_client = { version = "0.14", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Ethereum
alloy = { version = "1.4", features = ["full", "signer-local"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
secrecy = { version = "0.10", features = ["serde"] }
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.16"
