[package]
name = "defi-trading-agent"
version = "0.1.0"
edition = "2021"
description = "AI-powered DeFi trading agent using BAML runtime"
license = "MIT"

[[bin]]
name = "defi-agent"
path = "src/main.rs"

[dependencies]
# BAML Runtime (QuickJS sandbox for TypeScript agent execution)
# NOTE: baml-rt now lives in the upstream workspace at crates/baml-rt.
baml-rt = { path = "../../semiotic-agentium/agent-platform/crates/baml-rt" }
baml-rt-a2a = { path = "../../semiotic-agentium/agent-platform/crates/baml-rt-a2a" }
baml-rt-core = { path = "../../semiotic-agentium/agent-platform/crates/baml-rt-core" }
baml-rt-provenance = { path = "../../semiotic-agentium/agent-platform/crates/baml-rt-provenance" }
baml-rt-tools = { path = "../../semiotic-agentium/agent-platform/crates/baml-rt-tools" }

# DEX Aggregator
odos-sdk = "2.0"

# GraphQL
graphql_client = { version = "0.14", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Ethereum
alloy = { version = "1.4", features = ["full", "signer-local"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tool schema + TS type generation for agent-platform BamlTool
schemars = "1.1.0"
ts-rs = "11.1.0"
# Force js-sys version to align with baml-runtime constraints.
js-sys = "=0.3.82"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
secrecy = { version = "0.10", features = ["serde"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }

# Archive extraction
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.16"
